--- a/src/assets/stylesheets/components/_header.scss
+++ b/src/assets/stylesheets/components/_header.scss
@@ -2,7 +2,10 @@ header {
 
   width: 100%;
   color: $white;
-  background-color: $blue-grey-900;
+  background-color: $map-background;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: $blue-grey-900;
 
   .container {
     display: flex;
