--- a/src/assets/stylesheets/components/_tracker.scss
+++ b/src/assets/stylesheets/components/_tracker.scss
@@ -20,7 +20,106 @@
   }
 
 }
+.tracker-header {
 
+  flex-grow: grow;
+  width: 100%;
+  font-size: 1.5em;
+  text-align: center;
+  padding: .2em .2em;
+  border-right: solid 1px $blue-grey-900;
+
+  @media (min-width: 601px) {
+    &:nth-child(3n) {
+      border-right: 0;
+    }
+
+    &:nth-child(-n+3) {
+      border-top: 0;
+    }
+  }
+
+  @media (max-width: 600px) {
+    font-size: 2em;
+    width: 50%;
+
+    &:nth-child(-n+2) {
+      border-top: 0;
+    }
+  }
+
+  &:first-child {
+    border-top: 0;
+  }
+
+  p {
+
+    margin: .5em 0 0;
+
+    &:first-child {
+      margin: 0;
+    }
+
+  }
+
+  strong {
+    display: block;
+    font-size: .4em;
+    font-weight: normal;
+    color: $blue-grey-300;
+  }
+
+}
+.selected-tracker-stat {
+
+  flex-grow: grow;
+  width: 50%;
+  font-size: 3.5em;
+  text-align: center;
+  border-right: solid 1px $blue-grey-900;
+  border-top: solid 1px $blue-grey-900;
+
+  @media (min-width: 601px) {
+    &:nth-child(3n) {
+      border-right: 0;
+    }
+
+    &:nth-child(-n+3) {
+      border-top: 0;
+    }
+  }
+
+  @media (max-width: 600px) {
+    font-size: 2em;
+    width: 50%;
+
+    &:nth-child(-n+2) {
+      border-top: 0;
+    }
+  }
+
+  &:first-child {
+    border-top: 0;
+  }
+
+  p {
+
+    margin: .5em 0 0;
+
+    &:first-child {
+      margin: 0;
+    }
+
+  }
+
+  strong {
+    display: block;
+    font-size: .4em;
+    font-weight: normal;
+    color: $blue-grey-300;
+  }
+
+}
 .tracker-stat {
 
   flex-grow: grow;
